# pathtracer

./: CMakeLists.txt  README.md  main.cpp
docs/uml_diagrams/: Pathtracer_UML.uxf
src/: core.h  custom.h  materials.h
src/core/: geometry.h  optics.h  render.h
src/core/geometry/: point.cpp  point.h  ray.cpp  ray.h  tuple.cpp  tuple.h  vector.cpp  vector.h
src/core/optics/: emitter.cpp  emitter.h  laws.cpp  laws.h  material.cpp  material.h  redistributor.cpp  redistributor.h  reflector.cpp  reflector.h  spectrum.cpp  spectrum.h  transmitter.cpp  transmitter.h
src/core/render/: iimagesaver.h  iimagetile.h  ipathtracer.h  iraytraceable.h  irenderer.h  isampler.h  iviewport.h
src/custom/: geometry.h  render.h
src/custom/geometry/: reconstruction.cpp  reconstruction.h  sphere.cpp  sphere.h
src/custom/render/: ball.cpp  ball.h  depthpathtracer.cpp  depthpathtracer.h  fixedtooriginplaneviewport.cpp  fixedtooriginplaneviewport.h  importancesampler.cpp  importancesampler.h  previewpathtracer.cpp  previewpathtracer.h  purerandomsampler.cpp  purerandomsampler.h  (+12 more)
src/materials/: material_data.h  spectrum_data.h
tests/: grayscale_test_D65_spectrum.cpp  grayscale_test_uniform_spectrum.cpp  test_XYZ_functions.cpp  test_cornell_box0.cpp  test_cornell_box1.cpp  test_division_for_wavelength_step.cpp  test_division_for_wavelength_step2.cpp  test_gauss_lobe_exp_bound.cpp  test_gauss_petal.cpp  test_geometry.cpp  test_interpolation_spectrum_constructors.cpp  test_materials_colour.cpp  test_simple_constructor_scale_normalize_integral.cpp  test_spectrum_add_multiply.cpp
